MDEV-31838 Assertion fails upon replication online alter with MINIMAL row

Replica honors its own binlog_row_image value when it sets up read_set.
Avoid shrinking the set when online alter is running, i.e. leave it all set